# monetrix

./: .gitignore  README.md  pyproject.toml
.devcontainer/: devcontainer.json
src/: .env.example
src/monetrix/: app.py  config.py  indicators.py
src/monetrix/api_clients/: fmp_client.py  fmp_parsers.py
src/monetrix/pages/: 1_Stock_Quote.py  2_Historical_Data.py  about.py  comparison.py  forex.py  historical.py  quote.py  trends.py
tests/: test_config.py  test_fmp_client.py  test_indicators.py
